2002-09-19  Graydon Hoare  <graydon@redhat.com>

	* libop/op_events.h:
	* libop/op_events_desc.c: Move descriptions from here.
	* libop/op_events_desc.h:
	* libop/op_events.c: To here.
	(um_*): Add new static unit masks.
	(op_events): Use pointers to static unit masks.	
	* libop++/op_print_event.h:
	* libop++/op_print_event.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: 
	* utils/op_help.c: Make compatible with struct changes.

2002-09-18  John Levon  <levon@movementarian.org>

	* utils/op_start: give an example for unit mask.
 
2002-09-18  Will Cohen  <wcohen@redhat.com>

	* libop/op_mangle.c: (op_mangle_filename): Correct logic for
	  generating mangled name. Fix #611107
	
2002-09-15  John Levon  <levon@movementarian.org>

	* libop/op_event.c: fix comment
 
2002-09-15  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/cpu_type.c: allow to force RTC mode.
	* dae/oprofiled.c: checking when we need to backup samples
	  dir in RTC mode was broken.

2002-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_config.h: remove OP_MIN/MAX_PID, OP_MIN/MAX_PGRP
	* gui/oprof_start.cpp: pid_filter/pgrp_filter accept all integer

2002-09-13  John Levon  <levon@movementarian.org>

	* acinclude.m4: another tweak
 
2002-09-13  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in: never remove doc/oprofile.html.
	* acinclude.m4: small work-around for sed-related problem

2002-09-12  Will Cohen  <wcohen@redhat.com>

	* Makefile.in: Separate kernel and user code build rules.

2002-09-12  Will Cohen  <wcohen@redhat.com>
 
	* libutil++/child_reader.h (child_reader): Add missing "std::".
	* libutil++/child_reader.cpp (error_str): Ditto.
 
2002-09-12  John Levon  <levon@movementarian.org>

	* acinclude.m4: update from upstream
 
2002-09-12  John Levon  <levon@movementarian.org>

	* acinclude.m4: fix moc2/moc conflict, cache val
 
2002-09-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_reader.cpp:
	* libutil++/child_reader.h: fix for child terminated by a signal